--- a/BulletinBoard/ClientApp/src/app/products/products.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.html
@@ -3,6 +3,7 @@
 </div>
 
 <div class="products-conteiner">
+  <input type="text" class="search" [(ngModel)]="searchLine" (keyup.enter)="searchProducts()" placeholder="Поиск...">
   <h2 class="page-title">{{pageTitle}}</h2>
   <div class="row" *ngFor="let columns of productsOnPage">
     <div class="column" *ngFor="let product of columns">
