--- a/BulletinBoard/ClientApp/src/app/products/products.component.css
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.css
@@ -3,10 +3,30 @@
 }
 
 .products-conteiner {
-    width: 80%;
+    width: 100% - 200px;
     margin-left: 200px;
     padding-left: 5px;
 }
+
+  .products-conteiner input[type=text] {
+    margin-left: 10px;
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: src('../../assets/icons8-search-32.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+  }
+
+    .products-conteiner input[type=text]:focus {
+      width: 99%;
+    }
 
   .products-conteiner .page-title{
       margin-left: 20px;
@@ -65,16 +85,46 @@ a {
 @media screen and (max-width: 970px) {
   .menu {
     position: absolute;
-    top: 260px;
+    top: 60px;
     width: 100%;
     height: 60px;
   }
 
   .products-conteiner {
     position: absolute;
-    top: 310px;
+    top: 108px;
+    width: 100%;
+    margin-top: 5px;
+    margin-left: 0;
+  }
+    .products-conteiner input[type=text] {
+      width: 97%;
+    }
+      .products-conteiner input[type=text]:focus {
+        width: 97%;
+      }
+}
+
+@media screen and (max-width: 650px) {
+  .menu {
+    position: absolute;
+    top: 250px;
+    width: 100%;
+    height: 60px;
+  }
+
+  .products-conteiner {
+    position: absolute;
+    top: 298px;
     width: 100%;
     margin-left: 0;
-    margin-right: 10px;
   }
+
+    .products-conteiner input[type=text] {
+      width: 96%;
+    }
+
+      .products-conteiner input[type=text]:focus {
+        width: 96%;
+      }
 }
