--- a/BulletinBoard/ClientApp/src/app/products/product/product.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/product/product.component.html
@@ -26,7 +26,7 @@
       <strong>Стоимость: </strong>{{product?.price}} руб.
     </li>
     <li class="list-group-item">
-      <strong>Категория: </strong>{{product?.categoryId}}
+      <strong>Категория: </strong>{{product?.category.categoryName}}
     </li>
     <li class="list-group-item">
       <strong>Описание: </strong>{{product?.description}}
